slurm/k8s_mega/practice/8.hpa/02.hpa_v2/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hpa-v2-test
  name: hpa-v2-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-v2-test
  template:
    metadata:
      labels:
        app: hpa-v2-test
    spec:
      containers:
      - image: nginx:1.13
        name: nginx
