slurm/k8s_mega/practice/8.hpa/02.hpa_v2/deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hpa-v2-test
spec:
  rules:
  - host: hpa-v2-test.s<Ваш номер студента>.edu.slurm.io
    http:
      paths:
      - backend:
          serviceName: hpa-v2-test
          servicePort: 80
...
